stateDiagram-v2
  [*] --> pending
  pending --> running: evidence selected
  pending --> cancelled: cancelled before evaluation
  running --> passed: invariant satisfied
  running --> failed: comparable invariant violation
  running --> error: evidence or evaluator error
  running --> unsupported: capability or evaluator unavailable
  running --> cancelled: cancelled
  passed --> [*]
  failed --> [*]
  error --> [*]
  unsupported --> [*]
  cancelled --> [*]
